# optimal_line

./: .gitignore  README.md  pyproject.toml
data/random/: employees.csv  operations.csv
notebooks/: data.ipynb
scripts/: absence_analysis.py  demo.py  generate_random_data.py  line_robutness.py
src/optimal_line/: __init__.py  absence.py  io.py  models.py
