# pyproject.toml
[build-system]          # PEP 518
requires      = ["setuptools>=65.0.0", "wheel"]  # compatible with Python 3.8+
build-backend = "setuptools.build_meta"

[project]               # PEP 621
name            = "optimal_line"
version         = "0.1.0"
authors         = [
    {name = "adrien journe", email = "adrienjourne@protonmail.com"}
]
readme          = "README.md"
requires-python = ">=3.10"
classifiers     = ["Programming Language :: Python :: 3"]
dependencies    = ["numpy", "matplotlib", "scipy", "seaborn", "pandas"]

[tool.setuptools]  

[tool.setuptools.packages.find]
where = ["src"]
